# rust-on-nails-demo

./: README.md
.devcontainer/: Dockerfile
app/: Cargo.toml  build.rs
app/queries/: fortunes.sql
app/src/: errors.rs  main.rs
db/: schema.sql
db/migrations/: 20220909140510_initial_tables.sql
